# Pre-trained-models-for-time-series-data

./: .gitattributes  README.md  anomaly_detection_per_series.csv  anomaly_detection_summary.csv  autoreg_per_series.csv  autoreg_summary.csv  evaluate_granite_forecasting.py  forecasting_compare_yahoo.csv  forecasting_per_series.csv  forecasting_summary.csv  granite_anomaly_metrics.csv  granite_anomaly_per_series.csv  granite_forecasting_metrics_yahoo.csv  models.json5  pyproject.toml  run_anomaly_detection.py  run_benchmark.py  run_forecasting.py
anomaly_detection/: __init__.py
anomaly_detection/core/: system.py  time_series.py
anomaly_detection/models/: __init__.py  ar.py  chronos.py  granite_ttm.py
anomaly_detection_forecasting/models/: __init__.py  base.py  chronos.py
benchmark/src/: anomaly_detection_benchmark.py
src/: anomaly_detection_benchmark.py  metrics.py
src/loggers/: __init__.py
