[project]
name = "vsevolod"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.14" # requires-python = ">=3.10"
dependencies = [
    "json5>=0.13.0",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "salesforce-merlion>=2.0.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "termcolor>=3.3.0",
    "numpy>=1.26.4",
    "scikit-learn>=1.5.2",
    "scipy>=1.13.1",
    "torch>=2.2.0",
    "transformers>=4.40.0",
    "granite-tsfm>=0.3.5",
    "chronos-forecasting>=1.3.0",
]

[dependency-groups]
dev = [
    "notebook>=7.5.3",
]
